--- a/index.html
+++ b/index.html
@@ -129,17 +129,214 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-8 main-content">
-					.col-xs-12 .col-md-8
+					<h3>Resultado de la Busqueda <small>(Nombre: Samsung)</small></h3>
+					<table class="table table-bordered">
+						<thead>
+							<tr>
+								<th>
+									Marca
+								</th>
+								<th>
+									Tipo
+								</th>
+								<th>
+									Modelo
+								</th>
+								<th>
+									Código
+								</th>
+								<th>
+									Descripción
+								</th>
+								<th>
+									Stock
+								</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr class="success">
+								<td>Samsung</td>
+								<td>TV LED</td>
+								<td>EH6030</td>
+								<td>TVLSAMEH6030</td>
+								<td>TV LED ideal para ver el mundial...</td>
+								<td><span class="text-danger">1</span></td>
+							</tr>
+							<tr>
+								<td>Samsung</td>
+								<td>TV LED</td>
+								<td>EH6020</td>
+								<td>TVLSAMEH6020</td>
+								<td>TV LED ideal para ver el mundial...</td>
+								<td><span class="text-warning">3</span></td>
+							</tr>
+							<tr>
+								<td>Samsung</td>
+								<td>TV LED</td>
+								<td>EH6010</td>
+								<td>TVLSAMEH6010</td>
+								<td>TV LED ideal para ver el mundial...</td>
+								<td><span class="text-danger">1</span></td>
+							</tr>
+							<tr>
+								<td>Samsung</td>
+								<td>TV LED</td>
+								<td>EH5030</td>
+								<td>TVLSAMEH5030</td>
+								<td>TV LED ideal para ver el mundial...</td>
+								<td>6</span></td>
+							</tr>
+							<tr>
+								<td>Samsung</td>
+								<td>TV LED</td>
+								<td>EH5020</td>
+								<td>TVLSAMEH5020</td>
+								<td>TV LED ideal para ver el mundial...</td>
+								<td><span class="text-warning">3</span></td>
+							</tr>
+							<tr>
+								<td>Samsung</td>
+								<td>Home Theater</td>
+								<td>HT5020</td>
+								<td>HTLSAMEH5020</td>
+								<td>Sistema de Audio ideal para disfrutar...</td>
+								<td><span class="text-warning">4</span></td>
+							</tr>
+							<tr>
+								<td>Samsung</td>
+								<td>Home Theater</td>
+								<td>HT6020</td>
+								<td>HTLSAMEH6020</td>
+								<td>Sistema de Audio ideal para disfrutar...</td>
+								<td><span class="text-danger">1</span></td>
+							</tr>
+							<tr>
+								<td>Samsung</td>
+								<td>Home Theater</td>
+								<td>HT7020</td>
+								<td>HTLSAMEH7020</td>
+								<td>Sistema de Audio ideal para disfrutar...</td>
+								<td>5</td>
+							</tr>
+						</tbody>
+					</table>
+					<div class="center-block">
+						<ul class="pagination">
+							<li><a href="#">&laquo;</a></li>
+							<li class="active"><a href="#">1</a></li>
+							<li><a href="#">2</a></li>
+							<li><a href="#">3</a></li>
+							<li><a href="#">4</a></li>
+							<li><a href="#">5</a></li>
+							<li><a href="#">&raquo;</a></li>
+						</ul>
+					</div>
 				</div>
 				<div class="col-md-4 sidebar">
-					<div class="panel panel-default">
-						<ul class="list-group">
-							<li class="list-group-item">Cras justo odio</li>
-							<li class="list-group-item">Dapibus ac facilisis in</li>
-							<li class="list-group-item">Morbi leo risus</li>
-							<li class="list-group-item">Porta ac consectetur ac</li>
-							<li class="list-group-item">Vestibulum at eros</li>
-						</ul>
+					<div class="panel panel-primary">
+						<div class="panel-heading">
+							<h3 class="panel-title">
+								Buscar producto
+								<span class="glyphicon glyphicon-minus pull-right"></span>
+							</h3>
+						</div>
+						<div class="panel-body">
+							<form class="form-horizontal" role="form">
+								<div class="form-group">
+									<label for="nombre" class="col-sm-2 control-label">
+										Nombre
+									</label>
+									<div class="col-sm-10">
+										<input type="text" class="form-control" id="nombre" value="Samsung">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="codigo" class="col-sm-2 control-label">
+										Código
+									</label>
+									<div class="col-sm-10">
+										<input type="text" class="form-control" id="codigo" placeholder="Código del Producto">
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="col-sm-offset-2 col-sm-10">
+										<button type="button" class="btn btn-primary pull-right">
+											<span class="glyphicon glyphicon-search"></span>
+											Buscar
+										</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+					<div class="panel panel-primary">
+						<div class="panel-heading">
+							<h3 class="panel-title">
+								Detalle del producto seleccionado
+								<span class="glyphicon glyphicon-minus pull-right"></span>
+							</h3>
+						</div>
+						<div class="panel-body">
+							<dl class="dl-horizontal">
+								<dt>Nombre</dt>
+								<dd>Samsung LED TV EH6030</dd>
+								<dt>Código</dt>
+								<dd>TVLSAMEH6030</dd>
+								<dt>Dimensiones</dt>
+								<dd>42x82x52 cm</dd>
+								<dt>Resolución</dt>
+								<dd>FULL HD</dd>
+								<dt>Precio</dt>
+								<dd>$6520</dd>
+							</dl>
+							<div class="pull-right">
+								<button type="button" class="btn btn-default">Detalles</button>
+								<button type="button" class="btn btn-primary">Agregar</button>
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-primary">
+						<div class="panel-heading">
+							<h3 class="panel-title">
+								Carrito de productos
+								<span class="glyphicon glyphicon-minus pull-right"></span>
+							</h3>
+						</div>
+						<table class="table">
+							<thead>
+								<tr>
+									<th>#</th>
+									<th>Código</th>
+									<th>Precio</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>1</td>
+									<td>HTLG7230</td>
+									<td>$4251</td>
+									<td><span class="text-danger glyphicon glyphicon-remove"></span></td>
+								</tr>
+								<tr>
+									<td>2</td>
+									<td>MESAROBLE13</td>
+									<td>$2325</td>
+									<td><span class="text-danger glyphicon glyphicon-remove"></span></td>
+								</tr>
+							</tbody>
+							<tfoot>
+								<tr>
+									<th colspan="2">Total de la venta</th>
+									<th colspan="2">$6576</th>
+								</tr>
+							</tfoot>
+						</table>
+						<div class="panel-body">
+							<div class="pull-right">
+								<button type="button" class="btn btn-primary">Facturar</button>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
