--- a/development.html
+++ b/development.html
@@ -4,6 +4,6 @@
   <title>Aleph</title>
 </head>
 <body>
-  <script src="node_modules/steal/steal.js"></script>
+  <script src="node_modules/steal/steal.js" main="aleph-frontend/index.stache"></script>
 </body>
 </html>
