--- a/production.html
+++ b/production.html
@@ -4,6 +4,6 @@
   <title>Aleph</title>
 </head>
 <body>
-  <script src="node_modules/steal/steal.production.js" main="aleph-frontend/index.stache!done-autorender"></script>
+  <script src="node_modules/steal/steal.production.js" main="aleph-frontend/index.stache"></script>
 </body>
 </html>
